2001-05-31  Darin Adler  <darin@bentspoon.com>

	Integrated patch by limval@yahoo.com to make typing and clicking
	faster by sending fewer "selection_changed" signals. This may fix
	bug 5010.

	* libnautilus-private/nautilus-entry.c: (nautilus_entry_key_press),
	(nautilus_entry_motion_notify): Only send the "selection_changed"
	signal when a selection was there to change.

2001-05-31  Darin Adler  <darin@bentspoon.com>

	* src/nautilus-window-manage-views.c: (update_title): Missed a
	place that required a non-NULL sidebar. Thanks to Miguel
	Rodriguez Perez <migras@atlas.uvigo.es> for pointing it out.

2001-05-31  Darin Adler  <darin@bentspoon.com>

	Fixed a bug where the MIME type components short list query was
	not sorted. This could result in the wrong default component being
	selected, and may be the problem that caused some users to get the
	text component instead of the Mozilla web page component.

	* libnautilus-private/nautilus-mime-actions.c:
	(nautilus_mime_get_default_component_for_file_internal): Update
	since nautilus_do_component_query no longer takes an &ev.
	(nautilus_mime_get_short_list_applications_for_file): Remove
	unused ev variable. Fix problem where the user's added items would
	be added in reverse order.
	(build_joined_string): New helper function.
	(nautilus_mime_get_short_list_components_for_file): Update since
	nautilus_do_component_query no longer takes an &ev. Pass in a
	sorting order to the query so we don't lose the order of the short
	list.
	(nautilus_mime_actions_file_needs_full_file_attributes): Update
	since nautilus_do_component_query no longer takes an &ev.
	(nautilus_mime_get_all_components_for_file): Update since
	nautilus_do_component_query no longer takes an &ev.
	(mime_get_all_components_for_uri_scheme): Update since
	nautilus_do_component_query no longer takes an &ev.
	(nautilus_do_component_query): Update to use its own &ev instead of
	take one passed in. None of the callers were looking at the &ev.
	